--- a/web.api/package.json
+++ b/web.api/package.json
@@ -12,10 +12,10 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
+    "@types/node": "^10.17.27",
+    "@types/prettier": "^2.6.0",
     "@types/source-map-support": "^0.5.4",
-    "aws-cdk": "2.31.0",
+    "aws-cdk": "^2.31.0",
     "jest": "^27.5.1",
     "prettier": "2.7.1",
     "ts-jest": "^27.1.4",
@@ -23,7 +23,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.31.0",
+    "aws-cdk-lib": "^2.31.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.0.1",
     "source-map-support": "^0.5.21"
